--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,17 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-three/core": ["packages/core/src/index.ts"]
+      "@angular-three/core": ["packages/core/src/index.ts"],
+      "@angular-three/core/audios": ["packages/core/audios/src/index.ts"],
+      "@angular-three/core/cameras": ["packages/core/cameras/src/index.ts"],
+      "@angular-three/core/geometries": [
+        "packages/core/geometries/src/index.ts"
+      ],
+      "@angular-three/core/group": ["packages/core/group/src/index.ts"],
+      "@angular-three/core/materials": ["packages/core/materials/src/index.ts"],
+      "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
+      "@angular-three/core/points": ["packages/core/points/src/index.ts"],
+      "@angular-three/core/stats": ["packages/core/stats/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
