--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/language-service": "~13.0.2",
     "@nrwl/angular": "13.2.3",
     "@nrwl/cli": "13.2.3",
+    "@nrwl/devkit": "13.2.3",
     "@nrwl/eslint-plugin-nx": "13.2.3",
     "@nrwl/jest": "13.2.3",
     "@nrwl/linter": "13.2.3",
