--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
         "packages/core/geometries/src/index.ts"
       ],
       "@angular-three/core/group": ["packages/core/group/src/index.ts"],
+      "@angular-three/core/helpers": ["packages/core/helpers/src/index.ts"],
       "@angular-three/core/lights": ["packages/core/lights/src/index.ts"],
       "@angular-three/core/materials": ["packages/core/materials/src/index.ts"],
       "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
