--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,7 +32,8 @@
       "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
       "@angular-three/core/points": ["packages/core/points/src/index.ts"],
       "@angular-three/core/primitive": ["packages/core/primitive/src/index.ts"],
-      "@angular-three/core/stats": ["packages/core/stats/src/index.ts"]
+      "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
+      "@angular-three/core/textures": ["packages/core/textures/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
