feat(core): add sprites

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -63,7 +63,9 @@
           "packages/core/textures/**/*.ts",
           "packages/core/textures/**/*.html",
           "packages/core/lines/**/*.ts",
-          "packages/core/lines/**/*.html"
+          "packages/core/lines/**/*.html",
+          "packages/core/sprites/**/*.ts",
+          "packages/core/sprites/**/*.html"
         ]
       }
     }
