--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,7 @@
       "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
       "@angular-three/core/points": ["packages/core/points/src/index.ts"],
       "@angular-three/core/primitive": ["packages/core/primitive/src/index.ts"],
+      "@angular-three/core/sprites": ["packages/core/sprites/src/index.ts"],
       "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
       "@angular-three/core/textures": ["packages/core/textures/src/index.ts"]
     }
