--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ngrx/component-store": "13.0.1",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
+    "three-stdlib": "2.5.11",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
