--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
     "@ngrx/component-store": "13.0.1",
+    "cannon-es": "0.18.0",
+    "cannon-es-debugger": "0.1.4",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
     "three-stdlib": "2.5.11",
