feat(cannon): add generator for bodies

--- a/packages/cannon/project.json
+++ b/packages/cannon/project.json
@@ -33,7 +33,9 @@
       "options": {
         "lintFilePatterns": [
           "packages/cannon/src/**/*.ts",
-          "packages/cannon/src/**/*.html"
+          "packages/cannon/src/**/*.html",
+          "packages/cannon/bodies/**/*.ts",
+          "packages/cannon/bodies/**/*.html"
         ]
       }
     }
