--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@angular-three/cannon": ["packages/cannon/src/index.ts"],
       "@angular-three/cannon/bodies": ["packages/cannon/bodies/src/index.ts"],
+      "@angular-three/cannon/constraints": [
+        "packages/cannon/constraints/src/index.ts"
+      ],
       "@angular-three/core": ["packages/core/src/index.ts"],
       "@angular-three/core/attributes": [
         "packages/core/attributes/src/index.ts"
