--- a/packages/cannon/tsconfig.lib.json
+++ b/packages/cannon/tsconfig.lib.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
+    "allowJs": true,
     "types": []
   },
   "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts"],
