--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,7 +42,8 @@
       "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
       "@angular-three/core/textures": ["packages/core/textures/src/index.ts"],
       "@angular-three/soba": ["packages/soba/src/index.ts"],
-      "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"]
+      "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
+      "@angular-three/soba/shapes": ["packages/soba/shapes/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
