--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nice-color-palettes": "3.0.0",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
-    "three-stdlib": "2.5.11",
+    "three-stdlib": "~2.6.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
