--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0-beta.9",
   "license": "MIT",
   "scripts": {
-    "postinstall": "ngcc --properties es2015 browser module main"
+    "postinstall": "ngcc --properties es2015 browser module main",
+    "build": "nx run-many --target=build --projects=core,cannon,soba",
+    "postbuild": "cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2015 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2020 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/esm2020/lib"
   },
   "private": true,
   "dependencies": {
