--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cannon-es": "0.18.0",
     "cannon-es-debugger": "0.1.4",
     "nice-color-palettes": "3.0.0",
+    "postprocessing": "6.23.2",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
     "three-stdlib": "~2.6.0",
