--- a/packages/postprocessing/project.json
+++ b/packages/postprocessing/project.json
@@ -33,7 +33,9 @@
       "options": {
         "lintFilePatterns": [
           "packages/postprocessing/src/**/*.ts",
-          "packages/postprocessing/src/**/*.html"
+          "packages/postprocessing/src/**/*.html",
+          "packages/postprocessing/effects/**/*.ts",
+          "packages/postprocessing/effects/**/*.html"
         ]
       }
     }
