--- a/packages/soba/package.json
+++ b/packages/soba/package.json
@@ -6,10 +6,10 @@
   },
   "peerDependencies": {
     "@angular/common": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "three-stdlib": "~2.6.0"
+    "@angular/core": "^13.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "three-stdlib": "~2.6.0"
   }
 }
