--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nrwl/eslint-plugin-nx": "13.2.3",
     "@nrwl/jest": "13.2.3",
     "@nrwl/linter": "13.2.3",
+    "@nrwl/storybook": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
     "@types/jest": "27.0.3",
@@ -77,4 +78,3 @@
     }
   }
 }
-
