--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "release": "dotenv release-it --",
     "contributors:init": "all-contributors init",
     "contributors:add": "all-contributors add",
+    "storybook": "nx storybook storybook",
+    "storybook:build": "nx storybook storybook:build-storybook",
     "build": "nx run-many --target=build --projects=core,cannon,soba,postprocessing",
     "postbuild": "cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2015 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2020 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/esm2020/lib"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.2",
-    "@angular/common": "~13.0.2",
-    "@angular/compiler": "~13.0.2",
-    "@angular/core": "~13.0.2",
-    "@angular/forms": "~13.0.2",
-    "@angular/platform-browser": "~13.0.2",
-    "@angular/platform-browser-dynamic": "~13.0.2",
-    "@angular/router": "~13.0.2",
+    "@angular/animations": "~13.0.3",
+    "@angular/common": "~13.0.3",
+    "@angular/compiler": "~13.0.3",
+    "@angular/core": "~13.0.3",
+    "@angular/forms": "~13.0.3",
+    "@angular/platform-browser": "~13.0.3",
+    "@angular/platform-browser-dynamic": "~13.0.3",
+    "@angular/router": "~13.0.3",
     "@ngrx/component-store": "13.0.1",
     "cannon-es": "0.18.0",
     "cannon-es-debugger": "0.1.4",
@@ -28,18 +30,18 @@
     "postprocessing": "6.23.2",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
-    "three-stdlib": "~2.6.0",
+    "three-stdlib": "~2.6.1",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
+    "@angular-devkit/build-angular": "~13.0.4",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.2",
-    "@angular/language-service": "~13.0.2",
+    "@angular/cli": "~13.0.4",
+    "@angular/compiler-cli": "~13.0.3",
+    "@angular/language-service": "~13.0.3",
     "@nrwl/angular": "13.2.3",
     "@nrwl/cli": "13.2.3",
     "@nrwl/devkit": "13.2.3",
@@ -49,8 +51,12 @@
     "@nrwl/storybook": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
+    "@storybook/addon-essentials": "~6.4.4",
+    "@storybook/angular": "~6.4.4",
+    "@storybook/builder-webpack5": "~6.4.4",
+    "@storybook/manager-webpack5": "~6.4.4",
     "@types/jest": "27.0.3",
-    "@types/node": "16.11.10",
+    "@types/node": "16.11.11",
     "@types/three": "0.134.0",
     "@typescript-eslint/eslint-plugin": "~5.5.0",
     "@typescript-eslint/parser": "~5.5.0",
@@ -61,7 +67,7 @@
     "dotenv-cli": "4.1.1",
     "eslint": "8.3.0",
     "eslint-config-prettier": "8.3.0",
-    "jest": "27.3.1",
+    "jest": "27.4.3",
     "jest-preset-angular": "11.0.1",
     "ng-packagr": "~13.0.8",
     "postcss": "^8.4.4",
