--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@nrwl/storybook": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
+    "@release-it/bumper": "3.0.1",
+    "@release-it/conventional-changelog": "3.3.0",
     "@storybook/addon-essentials": "~6.4.5",
     "@storybook/angular": "~6.4.5",
     "@storybook/builder-webpack5": "~6.4.5",
@@ -75,6 +77,7 @@
     "postcss-preset-env": "^7.0.1",
     "postcss-url": "^10.1.3",
     "prettier": "^2.5.0",
+    "release-it": "14.11.8",
     "ts-jest": "27.0.7",
     "typescript": "~4.4.3"
   },
