chore(repo): add publish target and publish script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "storybook": "nx storybook storybook",
     "storybook:build": "nx storybook storybook:build-storybook",
     "build": "nx run-many --target=build --projects=core,cannon,soba,postprocessing",
-    "postbuild": "cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2015 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2020 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/esm2020/lib"
+    "postbuild": "cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2015 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2020 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/esm2020/lib",
+    "publish": "nx run-many --target=publish --all --parallel"
   },
   "private": true,
   "dependencies": {
