--- a/packages/cannon/project.json
+++ b/packages/cannon/project.json
@@ -40,6 +40,13 @@
           "packages/cannon/constraints/**/*.html"
         ]
       }
+    },
+    "publish": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "npm publish",
+        "cwd": "dist/packages/cannon"
+      }
     }
   },
   "tags": ["scope:cannon", "type:lib"]
