--- a/packages/postprocessing/project.json
+++ b/packages/postprocessing/project.json
@@ -38,6 +38,13 @@
           "packages/postprocessing/effects/**/*.html"
         ]
       }
+    },
+    "publish": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "npm publish",
+        "cwd": "dist/packages/core"
+      }
     }
   },
   "tags": ["scope:postprocessing", "type:lib"]
