chore(repo): adjust publish targets for soba and postprocessing

--- a/packages/postprocessing/project.json
+++ b/packages/postprocessing/project.json
@@ -43,7 +43,7 @@
       "executor": "@nrwl/workspace:run-commands",
       "options": {
         "command": "npm publish",
-        "cwd": "dist/packages/core"
+        "cwd": "dist/packages/postprocessing"
       }
     }
   },
