--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -47,7 +47,7 @@
       "executor": "@nrwl/workspace:run-commands",
       "options": {
         "command": "npm publish",
-        "cwd": "dist/packages/core"
+        "cwd": "dist/packages/soba"
       }
     }
   },
