--- a/packages/cannon/package.json
+++ b/packages/cannon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/cannon",
-  "version": "2.0.0-beta.11",
+  "version": "2.0.0",
   "publishConfig": {
     "access": "public"
   },
