--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nrwl/eslint-plugin-nx": "13.2.3",
     "@nrwl/jest": "13.2.3",
     "@nrwl/linter": "13.2.3",
+    "@nrwl/nx-cloud": "12.5.4",
     "@nrwl/storybook": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
