--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@nrwl/jest": "13.2.3",
     "@nrwl/linter": "13.2.3",
     "@nrwl/nx-cloud": "12.5.4",
+    "@nrwl/nx-plugin": "13.2.3",
     "@nrwl/storybook": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
