--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@nrwl/devkit": "13.2.3",
     "@nrwl/eslint-plugin-nx": "13.2.3",
     "@nrwl/jest": "13.2.3",
+    "@nrwl/js": "13.3.0-beta.1",
     "@nrwl/linter": "13.2.3",
+    "@nrwl/node": "13.2.3",
     "@nrwl/nx-cloud": "12.5.4",
     "@nrwl/nx-plugin": "13.2.3",
     "@nrwl/storybook": "13.2.3",
