--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,7 @@
     "access": "public"
   },
   "generators": "./plugins/generators.json",
+  "schematics": "./plugins/generators.json",
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0",
