--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -39,7 +39,9 @@
           "packages/soba/shapes/**/*.ts",
           "packages/soba/shapes/**/*.html",
           "packages/soba/loaders/**/*.ts",
-          "packages/soba/loaders/**/*.html"
+          "packages/soba/loaders/**/*.html",
+          "packages/soba/performances/**/*.ts",
+          "packages/soba/performances/**/*.html"
         ]
       }
     },
