--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -48,6 +48,9 @@
       "@angular-three/soba": ["packages/soba/src/index.ts"],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
+      "@angular-three/soba/performances": [
+        "packages/soba/performances/src/index.ts"
+      ],
       "@angular-three/soba/shapes": ["packages/soba/shapes/src/index.ts"],
       "@angular-three/storybook": ["packages/storybook/src/index.ts"]
     }
