--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -46,6 +46,9 @@
         "packages/postprocessing/effects/src/index.ts"
       ],
       "@angular-three/soba": ["packages/soba/src/index.ts"],
+      "@angular-three/soba/abstractions": [
+        "packages/soba/abstractions/src/index.ts"
+      ],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
       "@angular-three/soba/performances": [
