--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rxjs": "~7.4.0",
     "three": "0.134.0",
     "three-stdlib": "~2.6.1",
+    "troika-three-text": "0.44.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
