--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "joshuamorony",
+      "name": "Joshua Morony",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2578009?v=4",
+      "profile": "https://www.joshmorony.com/",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
