--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,11 +9,12 @@
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0",
-    "@ngrx/component-store": "^13.0.0",
     "three": "0.135.0"
   },
   "dependencies": {
     "@nrwl/devkit": "^13.0.0",
+    "@rx-angular/cdk": "~1.0.0-alpha.11",
+    "@rx-angular/state": "~1.4.6",
     "tslib": "^2.3.0"
   }
 }
