--- a/package.json
+++ b/package.json
@@ -39,42 +39,42 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
     "@angular/language-service": "~13.0.3",
-    "@nrwl/angular": "13.2.4",
-    "@nrwl/cli": "13.2.4",
-    "@nrwl/devkit": "13.2.4",
-    "@nrwl/eslint-plugin-nx": "13.2.4",
-    "@nrwl/jest": "13.2.4",
+    "@nrwl/angular": "13.3.1",
+    "@nrwl/cli": "13.3.1",
+    "@nrwl/devkit": "13.3.1",
+    "@nrwl/eslint-plugin-nx": "13.3.1",
+    "@nrwl/jest": "13.3.1",
     "@nrwl/js": "13.3.0-beta.1",
-    "@nrwl/linter": "13.2.4",
-    "@nrwl/node": "13.2.4",
+    "@nrwl/linter": "13.3.1",
+    "@nrwl/node": "13.3.1",
     "@nrwl/nx-cloud": "13.0.0",
-    "@nrwl/nx-plugin": "13.2.4",
-    "@nrwl/storybook": "13.2.4",
-    "@nrwl/tao": "13.2.4",
-    "@nrwl/workspace": "13.2.4",
+    "@nrwl/nx-plugin": "13.3.1",
+    "@nrwl/storybook": "13.3.1",
+    "@nrwl/tao": "13.3.1",
+    "@nrwl/workspace": "13.3.1",
     "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.3.0",
-    "@storybook/addon-essentials": "~6.4.9",
-    "@storybook/angular": "~6.4.9",
-    "@storybook/builder-webpack5": "~6.4.9",
-    "@storybook/manager-webpack5": "~6.4.9",
+    "@storybook/addon-essentials": "6.4.9",
+    "@storybook/angular": "6.4.9",
+    "@storybook/builder-webpack5": "6.4.9",
+    "@storybook/manager-webpack5": "6.4.9",
     "@types/jest": "27.0.3",
     "@types/node": "16.11.12",
     "@types/three": "0.135.0",
-    "@typescript-eslint/eslint-plugin": "~5.6.0",
-    "@typescript-eslint/parser": "~5.6.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "all-contributors-cli": "6.20.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
     "dotenv-cli": "4.1.1",
-    "eslint": "8.4.1",
+    "eslint": "8.2.0",
     "eslint-config-prettier": "8.3.0",
     "jest": "27.4.3",
     "jest-preset-angular": "11.0.1",
@@ -94,3 +94,4 @@
     }
   }
 }
+
