--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.3",
-    "@angular/common": "~13.0.3",
-    "@angular/compiler": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
+    "@angular/animations": "~13.1.0",
+    "@angular/common": "~13.1.0",
+    "@angular/compiler": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "@angular/forms": "~13.1.0",
+    "@angular/platform-browser": "~13.1.0",
+    "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/router": "~13.1.0",
     "@rx-angular/cdk": "1.0.0-alpha.11",
     "@rx-angular/state": "1.4.6",
     "cannon-es": "0.18.0",
@@ -38,19 +38,19 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "~13.1.1",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.3",
-    "@angular/language-service": "~13.0.3",
+    "@angular/cli": "~13.1.1",
+    "@angular/compiler-cli": "~13.1.0",
+    "@angular/language-service": "~13.1.0",
     "@nrwl/angular": "13.3.1",
     "@nrwl/cli": "13.3.1",
     "@nrwl/devkit": "13.3.1",
     "@nrwl/eslint-plugin-nx": "13.3.1",
     "@nrwl/jest": "13.3.1",
-    "@nrwl/js": "13.3.0-beta.1",
+    "@nrwl/js": "13.3.1",
     "@nrwl/linter": "13.3.1",
     "@nrwl/node": "13.3.1",
     "@nrwl/nx-cloud": "13.0.0",
@@ -67,26 +67,26 @@
     "@types/jest": "27.0.3",
     "@types/node": "16.11.12",
     "@types/three": "0.135.0",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
+    "@typescript-eslint/eslint-plugin": "5.6.0",
+    "@typescript-eslint/parser": "5.6.0",
     "all-contributors-cli": "6.20.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
     "dotenv-cli": "4.1.1",
-    "eslint": "8.2.0",
+    "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
-    "jest": "27.4.3",
+    "jest": "27.4.4",
     "jest-preset-angular": "11.0.1",
     "ng-packagr": "~13.1.1",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.0.1",
     "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
     "release-it": "14.11.8",
     "ts-jest": "27.1.1",
-    "typescript": "~4.4.3"
+    "typescript": "~4.5.3"
   },
   "config": {
     "commitizen": {
