chore(repo): use npm scripts for publish (Nx 13.3.2) instead

--- a/packages/cannon/package.json
+++ b/packages/cannon/package.json
@@ -4,6 +4,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "publish": "npm publish ../../dist/packages/cannon"
+  },
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0",
