--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "publish": "npm publish ../../dist/packages/core"
+  },
   "generators": "./plugins/generators.json",
   "schematics": "./plugins/generators.json",
   "peerDependencies": {
