cleanup(repo): revert npm scripts

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -113,6 +113,13 @@
           "packages/core/lod/**/*.html"
         ]
       }
+    },
+    "publish": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "npm publish",
+        "cwd": "dist/packages/core"
+      }
     }
   },
   "tags": ["scope:core", "type:lib"]
