--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -48,6 +48,13 @@
           "packages/soba/abstractions/**/*.html"
         ]
       }
+    },
+    "publish": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "npm publish",
+        "cwd": "dist/packages/soba"
+      }
     }
   },
   "tags": ["scope:soba", "type:lib"]
