--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,13 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 80,
+  "overrides": [
+    {
+      "files": "**/*.html",
+      "options": {
+        "printWidth": 120
+      }
+    }
+  ]
 }
+
