--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.3",
-    "@angular/common": "~13.0.3",
-    "@angular/compiler": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
+    "@angular/animations": "~13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
     "@rx-angular/cdk": "1.0.0-alpha.11",
     "@rx-angular/state": "1.4.6",
     "cannon-es": "0.18.0",
     "cannon-es-debugger": "0.1.4",
     "gsap": "^3.9.0",
     "lil-gui": "0.15.0",
-    "ngx-lil-gui": "^1.1.0",
+    "ngx-lil-gui": "^1.1.1",
     "nice-color-palettes": "3.0.0",
     "postprocessing": "6.23.3",
     "rxjs": "~7.4.0",
@@ -41,19 +41,19 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "~13.1.2",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.3",
-    "@angular/language-service": "~13.0.3",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
+    "@angular/language-service": "~13.1.1",
     "@nrwl/angular": "13.3.11",
     "@nrwl/cli": "13.3.11",
     "@nrwl/devkit": "13.3.11",
     "@nrwl/eslint-plugin-nx": "13.3.11",
     "@nrwl/jest": "13.3.11",
-    "@nrwl/js": "13.3.1",
+    "@nrwl/js": "13.3.11",
     "@nrwl/linter": "13.3.11",
     "@nrwl/node": "13.3.11",
     "@nrwl/nx-cloud": "13.0.0",
@@ -63,33 +63,33 @@
     "@nrwl/workspace": "13.3.11",
     "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.3.0",
-    "@storybook/addon-essentials": "6.4.9",
-    "@storybook/angular": "6.4.9",
-    "@storybook/builder-webpack5": "6.4.9",
-    "@storybook/manager-webpack5": "6.4.9",
+    "@storybook/addon-essentials": "~6.5.0-alpha.4",
+    "@storybook/angular": "~6.5.0-alpha.4",
+    "@storybook/builder-webpack5": "~6.5.0-alpha.4",
+    "@storybook/manager-webpack5": "~6.5.0-alpha.4",
     "@types/jest": "27.0.3",
     "@types/node": "16.11.12",
     "@types/three": "0.135.0",
-    "@typescript-eslint/eslint-plugin": "5.6.0",
-    "@typescript-eslint/parser": "5.6.0",
+    "@typescript-eslint/eslint-plugin": "5.8.0",
+    "@typescript-eslint/parser": "5.8.0",
     "all-contributors-cli": "6.20.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
     "dotenv-cli": "4.1.1",
-    "eslint": "8.4.1",
+    "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
-    "jest": "27.4.4",
+    "jest": "27.4.5",
     "jest-preset-angular": "11.0.1",
-    "ng-packagr": "~13.1.1",
+    "ng-packagr": "~13.1.2",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^7.0.1",
+    "postcss-preset-env": "^7.0.2",
     "postcss-url": "^10.1.3",
     "prettier": "^2.5.1",
     "release-it": "14.11.8",
-    "ts-jest": "27.1.1",
-    "typescript": "~4.4.4"
+    "ts-jest": "27.1.2",
+    "typescript": "~4.5.4"
   },
   "config": {
     "commitizen": {
@@ -97,4 +97,3 @@
     }
   }
 }
-
