--- a/packages/cannon/project.json
+++ b/packages/cannon/project.json
@@ -8,7 +8,8 @@
       "executor": "@nrwl/angular:package",
       "outputs": ["dist/packages/cannon"],
       "options": {
-        "project": "packages/cannon/ng-package.json"
+        "project": "packages/cannon/ng-package.json",
+        "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
         "production": {
