--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -19,7 +19,8 @@
       "executor": "@nrwl/angular:package",
       "outputs": ["dist/packages/core"],
       "options": {
-        "project": "packages/core/ng-package.json"
+        "project": "packages/core/ng-package.json",
+        "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
         "production": {
