--- a/packages/core/tsconfig.lib.prod.json
+++ b/packages/core/tsconfig.lib.prod.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declarationMap": false
   },
+  "exclude": ["**/*.stories.ts"],
   "angularCompilerOptions": {
     "compilationMode": "partial"
   }
