chore(soba): do not build buildable projects as peer dep

--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -8,7 +8,8 @@
       "executor": "@nrwl/angular:package",
       "outputs": ["dist/packages/soba"],
       "options": {
-        "project": "packages/soba/ng-package.json"
+        "project": "packages/soba/ng-package.json",
+        "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
         "production": {
