--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -48,7 +48,9 @@
           "packages/soba/abstractions/**/*.ts",
           "packages/soba/abstractions/**/*.html",
           "packages/soba/cameras/**/*.ts",
-          "packages/soba/cameras/**/*.html"
+          "packages/soba/cameras/**/*.html",
+          "packages/soba/misc/**/*.ts",
+          "packages/soba/misc/**/*.html"
         ]
       }
     },
