--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,7 +36,11 @@
       "@angular-three/core/primitive": ["packages/core/primitive/src/index.ts"],
       "@angular-three/core/sprites": ["packages/core/sprites/src/index.ts"],
       "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
-      "@angular-three/core/textures": ["packages/core/textures/src/index.ts"]
+      "@angular-three/core/textures": ["packages/core/textures/src/index.ts"],
+      "@angular-three/postprocessing": ["packages/postprocessing/src/index.ts"],
+      "@angular-three/postprocessing/effects": [
+        "packages/postprocessing/effects/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
