--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "postprocessing": "~6.23.5",
     "rxjs": "~7.5.2",
     "three": "~0.137.5",
+    "three-stdlib": "~2.8.4",
+    "troika-three-text": "~0.45.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular-devkit/build-angular": "~13.2.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
+    "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.0",
     "@angular/language-service": "~13.2.0",
     "@nrwl/angular": "13.7.1",
@@ -42,16 +44,16 @@
     "@types/jest": "27.4.0",
     "@types/node": "16.11.7",
     "@types/three": "0.137.0",
-    "@typescript-eslint/eslint-plugin": "~5.10.1",
-    "@typescript-eslint/parser": "~5.10.1",
+    "@typescript-eslint/eslint-plugin": "~5.10.2",
+    "@typescript-eslint/parser": "~5.10.2",
     "eslint": "~8.8.0",
     "eslint-config-prettier": "8.3.0",
     "jest": "27.4.7",
     "jest-preset-angular": "11.1.0",
-    "ng-packagr": "^13.2.0",
+    "ng-packagr": "^13.2.1",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^7.2.3",
+    "postcss-preset-env": "^7.3.0",
     "postcss-url": "^10.1.3",
     "prettier": "~2.5.1",
     "ts-jest": "27.1.3",
