--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -40,7 +40,10 @@
       "@angular-three/postprocessing": ["packages/postprocessing/src/index.ts"],
       "@angular-three/postprocessing/effects": [
         "packages/postprocessing/effects/src/index.ts"
-      ]
+      ],
+      "@angular-three/soba": ["packages/soba/src/index.ts"],
+      "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
+      "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
