--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rx-angular/state": "~1.4.6",
     "cannon-es": "^0.19.0",
     "cannon-es-debugger": "^1.0.0",
+    "nice-color-palettes": "3.0.0",
     "postprocessing": "~6.23.5",
     "rxjs": "~7.5.2",
     "three": "~0.137.5",
