--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -37,7 +37,9 @@
           "packages/soba/loaders/**/*.ts",
           "packages/soba/loaders/**/*.html",
           "packages/soba/controls/**/*.ts",
-          "packages/soba/controls/**/*.html"
+          "packages/soba/controls/**/*.html",
+          "packages/soba/shapes/**/*.ts",
+          "packages/soba/shapes/**/*.html"
         ]
       }
     }
