feat(soba/cameras): add cameras

--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -39,7 +39,9 @@
           "packages/soba/controls/**/*.ts",
           "packages/soba/controls/**/*.html",
           "packages/soba/shapes/**/*.ts",
-          "packages/soba/shapes/**/*.html"
+          "packages/soba/shapes/**/*.html",
+          "packages/soba/cameras/**/*.ts",
+          "packages/soba/cameras/**/*.html"
         ]
       }
     }
