--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -51,6 +51,7 @@
       "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
+      "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"],
       "@angular-three/soba/shapes": ["packages/soba/shapes/src/index.ts"]
     }
   },
