--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -52,6 +52,9 @@
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
       "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"],
+      "@angular-three/soba/performances": [
+        "packages/soba/performances/src/index.ts"
+      ],
       "@angular-three/soba/shapes": ["packages/soba/shapes/src/index.ts"]
     }
   },
