docs(storybook): init storybook

--- a/package.json
+++ b/package.json
@@ -42,8 +42,13 @@
     "@nrwl/eslint-plugin-nx": "13.7.1",
     "@nrwl/jest": "13.7.1",
     "@nrwl/linter": "13.7.1",
+    "@nrwl/storybook": "13.7.2",
     "@nrwl/tao": "13.7.1",
     "@nrwl/workspace": "13.7.1",
+    "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/angular": "~6.4.12",
+    "@storybook/builder-webpack5": "~6.4.12",
+    "@storybook/manager-webpack5": "~6.4.12",
     "@types/jest": "27.4.0",
     "@types/node": "16.11.7",
     "@types/three": "0.137.0",
