--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -48,6 +48,9 @@
         "packages/postprocessing/effects/src/index.ts"
       ],
       "@angular-three/soba": ["packages/soba/src/index.ts"],
+      "@angular-three/soba/abstractions": [
+        "packages/soba/abstractions/src/index.ts"
+      ],
       "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
