--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@angular-three/core/lights": ["libs/core/lights/src/index.ts"],
       "@angular-three/core/lines": ["libs/core/lines/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
+      "@angular-three/core/primitive": ["libs/core/primitive/src/index.ts"],
       "@angular-three/core/sprites": ["libs/core/sprites/src/index.ts"],
       "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
       "@angular-three/core/textures": ["libs/core/textures/src/index.ts"]
