--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
       "@angular-three/core/lines": ["libs/core/lines/src/index.ts"],
       "@angular-three/core/lod": ["libs/core/lod/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
+      "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
       "@angular-three/core/points": ["libs/core/points/src/index.ts"],
       "@angular-three/core/primitive": ["libs/core/primitive/src/index.ts"],
       "@angular-three/core/sprites": ["libs/core/sprites/src/index.ts"],
