--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@angular-three/core/cameras": ["libs/core/cameras/src/index.ts"],
       "@angular-three/core/curves": ["libs/core/curves/src/index.ts"],
       "@angular-three/core/geometries": ["libs/core/geometries/src/index.ts"],
+      "@angular-three/core/group": ["libs/core/group/src/index.ts"],
       "@angular-three/core/helpers": ["libs/core/helpers/src/index.ts"],
       "@angular-three/core/lights": ["libs/core/lights/src/index.ts"],
       "@angular-three/core/lines": ["libs/core/lines/src/index.ts"],
