feat(soba): add Soba

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,7 +32,8 @@
       "@angular-three/core/primitive": ["libs/core/primitive/src/index.ts"],
       "@angular-three/core/sprites": ["libs/core/sprites/src/index.ts"],
       "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
-      "@angular-three/core/textures": ["libs/core/textures/src/index.ts"]
+      "@angular-three/core/textures": ["libs/core/textures/src/index.ts"],
+      "@angular-three/soba": ["libs/soba/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
