--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/router": "~13.2.2",
     "rxjs": "~7.5.3",
     "three": "0.137.5",
+    "three-stdlib": "~2.8.6",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
