--- a/libs/soba/.eslintrc.json
+++ b/libs/soba/.eslintrc.json
@@ -4,28 +4,8 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "extends": [
-        "plugin:@nrwl/nx/angular",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ],
-      "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "ngt",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "ngt",
-            "style": "kebab-case"
-          }
-        ]
-      }
+      "extends": ["plugin:@angular-eslint/template/process-inline-templates"],
+      "rules": {}
     },
     {
       "files": ["*.html"],
