--- a/libs/soba/package.json
+++ b/libs/soba/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@angular-three/soba",
-  "version": "0.0.1",
+  "version": "3.2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0"
   },
   "dependencies": {
+    "three-stdlib": "~2.8.6",
     "tslib": "^2.3.0"
   }
 }
