--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,41 +1,50 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "rootDir": ".",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
-    "lib": ["es2017", "dom"],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@angular-three/core": ["libs/core/src/index.ts"],
-      "@angular-three/core/attributes": ["libs/core/attributes/src/index.ts"],
-      "@angular-three/core/audios": ["libs/core/audios/src/index.ts"],
-      "@angular-three/core/cameras": ["libs/core/cameras/src/index.ts"],
-      "@angular-three/core/curves": ["libs/core/curves/src/index.ts"],
-      "@angular-three/core/geometries": ["libs/core/geometries/src/index.ts"],
-      "@angular-three/core/group": ["libs/core/group/src/index.ts"],
-      "@angular-three/core/helpers": ["libs/core/helpers/src/index.ts"],
-      "@angular-three/core/lights": ["libs/core/lights/src/index.ts"],
-      "@angular-three/core/lines": ["libs/core/lines/src/index.ts"],
-      "@angular-three/core/lod": ["libs/core/lod/src/index.ts"],
-      "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
-      "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
-      "@angular-three/core/points": ["libs/core/points/src/index.ts"],
-      "@angular-three/core/primitive": ["libs/core/primitive/src/index.ts"],
-      "@angular-three/core/sprites": ["libs/core/sprites/src/index.ts"],
-      "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
-      "@angular-three/core/textures": ["libs/core/textures/src/index.ts"],
-      "@angular-three/soba": ["libs/soba/src/index.ts"],
-      "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"]
-    }
-  },
-  "exclude": ["node_modules", "tmp"]
+    "compileOnSave": false,
+    "compilerOptions": {
+        "rootDir": ".",
+        "sourceMap": true,
+        "declaration": false,
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "importHelpers": true,
+        "target": "es2015",
+        "module": "esnext",
+        "lib": ["es2017", "dom"],
+        "skipLibCheck": true,
+        "skipDefaultLibCheck": true,
+        "baseUrl": ".",
+        "paths": {
+            "@angular-three/core": ["libs/core/src/index.ts"],
+            "@angular-three/core/attributes": [
+                "libs/core/attributes/src/index.ts"
+            ],
+            "@angular-three/core/audios": ["libs/core/audios/src/index.ts"],
+            "@angular-three/core/cameras": ["libs/core/cameras/src/index.ts"],
+            "@angular-three/core/curves": ["libs/core/curves/src/index.ts"],
+            "@angular-three/core/geometries": [
+                "libs/core/geometries/src/index.ts"
+            ],
+            "@angular-three/core/group": ["libs/core/group/src/index.ts"],
+            "@angular-three/core/helpers": ["libs/core/helpers/src/index.ts"],
+            "@angular-three/core/lights": ["libs/core/lights/src/index.ts"],
+            "@angular-three/core/lines": ["libs/core/lines/src/index.ts"],
+            "@angular-three/core/lod": ["libs/core/lod/src/index.ts"],
+            "@angular-three/core/materials": [
+                "libs/core/materials/src/index.ts"
+            ],
+            "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
+            "@angular-three/core/points": ["libs/core/points/src/index.ts"],
+            "@angular-three/core/primitive": [
+                "libs/core/primitive/src/index.ts"
+            ],
+            "@angular-three/core/sprites": ["libs/core/sprites/src/index.ts"],
+            "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
+            "@angular-three/core/textures": ["libs/core/textures/src/index.ts"],
+            "@angular-three/soba": ["libs/soba/src/index.ts"],
+            "@angular-three/soba/cameras": ["libs/soba/cameras/src/index.ts"],
+            "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"]
+        }
+    },
+    "exclude": ["node_modules", "tmp"]
 }
