--- a/package.json
+++ b/package.json
@@ -1,59 +1,66 @@
 {
-  "name": "angular-three",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "postinstall": "ngcc --properties es2015 browser module main"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~13.2.2",
-    "@angular/common": "~13.2.2",
-    "@angular/compiler": "~13.2.2",
-    "@angular/core": "~13.2.2",
-    "@angular/forms": "~13.2.2",
-    "@angular/platform-browser": "~13.2.2",
-    "@angular/platform-browser-dynamic": "~13.2.2",
-    "@angular/router": "~13.2.2",
-    "rxjs": "~7.5.3",
-    "three": "0.137.5",
-    "three-stdlib": "~2.8.6",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.2",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.2",
-    "@angular/language-service": "~13.2.2",
-    "@nrwl/angular": "13.8.0",
-    "@nrwl/cli": "13.8.0",
-    "@nrwl/devkit": "13.8.0",
-    "@nrwl/eslint-plugin-nx": "13.8.0",
-    "@nrwl/jest": "13.8.0",
-    "@nrwl/linter": "13.8.0",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "13.8.0",
-    "@nrwl/workspace": "13.8.0",
-    "@types/jest": "27.4.0",
-    "@types/node": "16.11.7",
-    "@types/three": "0.137.0",
-    "@typescript-eslint/eslint-plugin": "~5.11.0",
-    "@typescript-eslint/parser": "~5.11.0",
-    "eslint": "~8.8.0",
-    "eslint-config-prettier": "8.3.0",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.0",
-    "ng-packagr": "~13.2.1",
-    "postcss": "~8.4.6",
-    "postcss-import": "~14.0.2",
-    "postcss-preset-env": "~7.3.1",
-    "postcss-url": "~10.1.3",
-    "prettier": "^2.5.1",
-    "ts-jest": "27.1.3",
-    "typescript": "~4.5.5"
-  }
+    "name": "angular-three",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "postinstall": "ngcc --properties es2015 browser module main"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~13.2.2",
+        "@angular/common": "~13.2.2",
+        "@angular/compiler": "~13.2.2",
+        "@angular/core": "~13.2.2",
+        "@angular/forms": "~13.2.2",
+        "@angular/platform-browser": "~13.2.2",
+        "@angular/platform-browser-dynamic": "~13.2.2",
+        "@angular/router": "~13.2.2",
+        "rxjs": "~7.5.3",
+        "three": "0.137.5",
+        "three-stdlib": "~2.8.6",
+        "tslib": "^2.3.1",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~13.2.2",
+        "@angular-eslint/eslint-plugin": "~13.0.1",
+        "@angular-eslint/eslint-plugin-template": "~13.0.1",
+        "@angular-eslint/template-parser": "~13.0.1",
+        "@angular/cli": "~13.2.2",
+        "@angular/compiler-cli": "~13.2.2",
+        "@angular/language-service": "~13.2.2",
+        "@nrwl/angular": "13.8.0",
+        "@nrwl/cli": "13.8.0",
+        "@nrwl/devkit": "13.8.0",
+        "@nrwl/eslint-plugin-nx": "13.8.0",
+        "@nrwl/jest": "13.8.0",
+        "@nrwl/linter": "13.8.0",
+        "@nrwl/nx-cloud": "latest",
+        "@nrwl/storybook": "13.8.0",
+        "@nrwl/tao": "13.8.0",
+        "@nrwl/workspace": "13.8.0",
+        "@storybook/addon-essentials": "~6.4.12",
+        "@storybook/addons": "~6.4.18",
+        "@storybook/angular": "~6.4.12",
+        "@storybook/builder-webpack5": "~6.4.12",
+        "@storybook/manager-webpack5": "~6.4.12",
+        "@storybook/theming": "~6.4.18",
+        "@types/jest": "27.4.0",
+        "@types/node": "16.11.7",
+        "@types/three": "0.137.0",
+        "@typescript-eslint/eslint-plugin": "~5.11.0",
+        "@typescript-eslint/parser": "~5.11.0",
+        "eslint": "~8.8.0",
+        "eslint-config-prettier": "8.3.0",
+        "jest": "27.5.1",
+        "jest-preset-angular": "11.1.0",
+        "ng-packagr": "~13.2.1",
+        "postcss": "~8.4.6",
+        "postcss-import": "~14.0.2",
+        "postcss-preset-env": "~7.3.1",
+        "postcss-url": "~10.1.3",
+        "prettier": "^2.5.1",
+        "ts-jest": "27.1.3",
+        "typescript": "~4.5.5"
+    }
 }
